--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-typescript": "^2.7.7",
+    "gulp-zip": "^3.0.2",
     "typescript": "^1.5.0-beta"
   }
 }
